add gitignore for executable files and remove executable files from git tracking

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
 				"${file}",
 				"-O0",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.o"
+				"${fileDirname}\\output\\${fileBasenameNoExtension}.o"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
